@@ -2,7 +2,11 @@ package com.softpro.dnaig;
 
 import com.softpro.dnaig.objData.Entity;
 import com.softpro.dnaig.preview.PreviewWindow;
+import com.softpro.dnaig.properties.CameraProperties;
+import com.softpro.dnaig.properties.LightProperties;
 import com.softpro.dnaig.properties.ObjectProperties;
+import com.softpro.dnaig.properties.Properties;
+import com.softpro.dnaig.utils.Config;
 import com.softpro.dnaig.utils.ObjFileReader;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
@@ -10,26 +14,30 @@ import javafx.fxml.FXMLLoader;
 import javafx.geometry.Insets;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
-import javafx.scene.control.Button;
-import javafx.scene.control.ListView;
-import javafx.scene.control.MenuItem;
-import javafx.scene.control.TextField;
+import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.KeyEvent;
 import javafx.scene.input.MouseEvent;
+import javafx.scene.layout.GridPane;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
+import javafx.scene.text.Text;
 import javafx.stage.FileChooser;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.PortUnreachableException;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
+import java.util.function.Consumer;
+
 
 public class ApplicationController {
 
@@ -38,9 +46,9 @@ public class ApplicationController {
     private VBox parent;
 
     //IMGs
-    String objectIMG = "https://i.imgur.com/4JzMipP.png";
-    String lightObjImg = "https://i.imgur.com/nbKsECu.png";
-    String cameraObjImg = "https://i.imgur.com/nbKsECu.png"; //WRONG IMAGE LINK
+    URL objectIMG = getClass().getResource("sprites/Obj_img.png");
+    URL lightObjImg = getClass().getResource("sprites/light_Img.png");
+    URL cameraObjImg = getClass().getResource("sprites/Camera_img.png");
 
     /**
      * //Relative Path, won't work
@@ -49,52 +57,27 @@ public class ApplicationController {
      * String cameraObjImg = "../resources/com/softpro/dnaig/sprites/Camera_img.png";
      */
 
-
-    //ObjectTextField
-    //EDITABLE
-    @FXML
-    private TextField nameTXT;
-    @FXML
-    private TextField xPosTXT;
-    @FXML
-    private TextField xRotTXT;
-    @FXML
-    private TextField yPosTXT;
-    @FXML
-    private TextField yRotTXT;
-    @FXML
-    private TextField zPosTXT;
-    @FXML
-    private TextField zRotTXT;
-
-    //NOT EDITABLE
-    @FXML
-    private TextField idTXT;
-    @FXML
-    private TextField facesTXT;
-    @FXML
-    private TextField verticesTXT;
-
     //Menu
     @FXML
     private MenuItem menuTheme;
+    @FXML
+    private ScrollPane scrollPaneProperties;
     private boolean isLightMode = true;
 
 
     @FXML
     private ListView<Button> objectListView;
-    private final LinkedList<ObjectProperties> propertiesList = new LinkedList<>();
+    private final LinkedList<Properties> propertiesList = new LinkedList<>();
     private String lastClickedID = "0";
     private final FileChooser fileChooser = new FileChooser();
     File latestFile = null;
     @FXML
     private StackPane previewPane;
     private PreviewWindow previewWindow;
-
-    //private final ObjFileReader objImporter = new ObjFileReader();
     final List<Entity> entityList = new ArrayList<>();
+    private static int objectID = 0;
 
-    public ApplicationController() {
+    public ApplicationController() {;
     }
 
 
@@ -107,26 +90,30 @@ public class ApplicationController {
 
     @FXML
     void importLightObject(MouseEvent event) throws IOException {
-        String values = openPropertiesWindows();
-        //System.out.println("importLightObjects Values: " + values);
-        previewWindow.addObject("src/main/java/com/softpro/dnaig/assets/objFile/cube/cube.obj", -1);
-        createGUIObject(null);
+        int id = objectID++;
+        openLightPropertiesWindows();
+        previewWindow.addObject("src/main/java/com/softpro/dnaig/assets/objFile/lightbulb/lightbulb.obj", id);
+        createGUIObject(null, id, Config.type.LIGHT);
     }
 
     @FXML
-    void importCameraObject(MouseEvent event) {
-        System.out.println("ADD CAMERA");
+    void importCameraObject(MouseEvent event) throws IOException{
+        int id = objectID++;
+        openCameraPropertiesWindows();
+        previewWindow.addObject("src/main/java/com/softpro/dnaig/assets/objFile/camera/camera.obj", id);
+        createGUIObject(null, id, Config.type.CAMERA);
     }
 
     @FXML
     void importObject(MouseEvent event) {
         File entityFile = fileChooser();
         try {
-            Entity entity = ObjFileReader.createObject(entityFile.getPath());
+            int id = objectID++;
+            Entity entity = ObjFileReader.createObject(entityFile.getPath(), id);
             System.out.println(entity);
             entityList.add(entity);
 
-            createGUIObject(entity);
+            createGUIObject(entity, id, Config.type.OBJECT);
             previewWindow.addObject(entityFile.getPath(), entity.getID());
         } catch (IOException ignored) {
         }
@@ -136,6 +123,7 @@ public class ApplicationController {
     void loadRayTracer(MouseEvent event) {
         //TODO: open new scene/window from RayTracer after button Pressed!
         System.out.println("loading External Window for RayTracer...");
+        Output.getOutput().openRayTracer(propertiesList);
     }
 
 
@@ -155,7 +143,7 @@ public class ApplicationController {
     /*************OBJECTS**************/
 
     // OPEN OBJECT SETTINGS SCENE (LIGHT AND/OR CAMERA)
-    private String openPropertiesWindows() throws IOException {
+    private String openLightPropertiesWindows() throws IOException {
         Parent root = FXMLLoader.load(Objects.requireNonNull(getClass().getResource("lightProperties.fxml")));
 
         Scene scene = new Scene(root);
@@ -169,49 +157,54 @@ public class ApplicationController {
         return "0";
     }
 
+    private String openCameraPropertiesWindows() throws IOException {
+        Parent root = FXMLLoader.load(Objects.requireNonNull(getClass().getResource("cameraProperties.fxml")));
+
+        Scene scene = new Scene(root);
+        Stage primaryStage = new Stage();
+        primaryStage.setTitle("cameraProperties");
+        primaryStage.setScene(scene);
+
+        primaryStage.initModality(Modality.APPLICATION_MODAL);
+        primaryStage.show();
+
+        return "0";
+    }
+
     // ListView
-    void createGUIObject(Entity e) {
-        loadObjectProperties(e);
+    void createGUIObject(Entity e, int id, Config.type objectType) {
+        loadObjectProperties(e, id, objectType);
         setObjectListView();
     }
 
     // ListView add Objects (IMG-View)
-    private void loadObjectProperties(Entity e) {
+    private void loadObjectProperties(Entity e, int id, Config.type categoryType) {
         ObjectProperties op;
-        int id;
+        LightProperties lp;
+        CameraProperties cp;
 
         // TODO
         //  3D model from a light and camera in loadOBJ folder, needs to be added when button clicked   //
         //  /////////////////////////////////////////////////////////////////////////////////////////  //
 
-        if (e == null) {     //load light properties
-            id = 1;
-
-            //TODO: fix ID
-            int objID;
-            if (!propertiesList.isEmpty()) {
-                objID = Integer.parseInt(propertiesList.getLast().getObjID()) + 1;
-            } else {
-                objID = 0;
-            }
-            op = new ObjectProperties(
-                    String.valueOf(objID),
+        if (categoryType == Config.type.LIGHT) {     //load light properties
+            lp = new LightProperties(
+                    categoryType,
+                    Config.lightvariants.POINT,
+                    100,
                     "light",
-                    "N/A",
-                    "N/A",
+                    String.valueOf(id),
                     new String[]{"0", "0", "0"},
-                    new String[]{"0", "0", "0"},
-                    null,
-                    this);
-
-        } else {          //load object properties
-            id = 0;
-
+                    new String[]{"0", "0", "0"});
+            loadImage(lp, categoryType);
+        } else if (categoryType == Config.type.OBJECT) {          //load object properties
             String objFileName = latestFile.getName().substring(0, latestFile.getName().lastIndexOf('.'));
             e.setObjName(objFileName);
 
             op = new ObjectProperties(
-                    String.valueOf(e.getID()),
+                    categoryType,
+                    e,
+                    String.valueOf(id),
                     e.getObjName(),
                     Integer.toString(e.getFaces().size()),
                     Integer.toString(e.getVertexCount()),
@@ -222,69 +215,153 @@ public class ApplicationController {
                     new String[]{
                             Float.toString(e.getOrient().getX()),
                             Float.toString(e.getOrient().getY()),
-                            Float.toString(e.getOrient().getZ())},
-                    previewWindow::updateSelected,
-                    this);
+                            Float.toString(e.getOrient().getZ())});
+            loadImage(op, categoryType);
+        } else {          //load camera properties
+            cp = new CameraProperties(
+                    categoryType,
+                    Config.cameravariants.CAM1,
+                    "camera",
+                    String.valueOf(id),
+                    new String[]{"0", "0", "0"},
+                    new String[]{"0", "0", "0"},
+                    1920,
+                    1080);
+            loadImage(cp, categoryType);
         }
-
-        updateObjectPropertiesMenu(op);
-        loadImage(op, id);
     }
 
     private void setObjectListView() {
         //ObjectList Region
         objectListView.setPadding(new Insets(10, 5, 10, 5));
-        objectListView.getItems().add(propertiesList.get(propertiesList.size() - 1).getButton());
+        objectListView.getItems().add(propertiesList.getLast().getButton()); //davor  propertiesList.get(propertiesList.size() - 1).getButton()
+    }
+
+    private void setButton(ImageView iv, Config.type categoryType){
+        Button button = propertiesList.getLast().getButton();
+        iv.setFitWidth(100);
+        iv.setFitHeight(100);
+        button.setGraphic(iv);
+        button.setOnAction(e -> {
+            Object x = e.getSource();
+            for(int i = 0; i < propertiesList.size();i++){
+                if (propertiesList.get(i).getButton().equals(x)) {
+                    setLastClickedID(propertiesList.get(i).getId());
+                    break;
+                }
+            }
+            updateProperties(categoryType);
+            previewWindow.updateSelected(Integer.parseInt(lastClickedID));
+        });
     }
 
     // GET IMAGES
-    private void loadImage(ObjectProperties op, int id) {
+    private void loadImage(Properties op, Config.type categoryType) {
         Image image;
-        if (id == 0) {      //object
-            image = new Image(objectIMG);
-        } else if (id == 1) {       //light
-            image = new Image(lightObjImg);
-        } else {
-            image = new Image(cameraObjImg);
+        if (categoryType == Config.type.OBJECT) {      //object
+            try {
+                image = new Image(objectIMG.toURI().getPath().substring(1));
+            } catch (URISyntaxException e) {
+                throw new RuntimeException(e);
+            }
+        } else if (categoryType == Config.type.LIGHT) {       //light
+            try {
+                image = new Image(lightObjImg.toURI().getPath().substring(1));
+            } catch (URISyntaxException e) {
+                throw new RuntimeException(e);
+            }
+        } else {    // camera
+            try {
+                image = new Image(cameraObjImg.toURI().getPath().substring(1));
+            } catch (URISyntaxException e) {
+                throw new RuntimeException(e);
+            }
         }
-        op.setImageView(new ImageView(image));
         propertiesList.add(op);
+        setButton(new ImageView(image),categoryType); //setButton and call function
     }
 
 
     /*************OBJECT COORDINATES**************/
 
-    // Write values into Coord-Sys
-    void updateObjectPropertiesMenu(ObjectProperties op) {
 
-        this.idTXT.setText(op.getObjID());
-        this.nameTXT.setText(op.getObjName());
-        this.facesTXT.setText(op.getObjFaces());
-        this.verticesTXT.setText(op.getObjVertices());
+    public void updateProperties(Config.type contentType){
+        GridPane gp = new GridPane();
+        gp.setVisible(true);
+        gp.addColumn(2);
+        gp.addRow(10);
+        int id=0;
 
-        this.xPosTXT.setText(op.getObjPos()[0]);
-        this.yPosTXT.setText(op.getObjPos()[1]);
-        this.zPosTXT.setText(op.getObjPos()[2]);
+        for(int i = 0; i < propertiesList.size();i++){
+            if (propertiesList.get(i).getId().equals(String.valueOf(lastClickedID))) {
+                id = i;
+            }
+        }
 
-        this.xRotTXT.setText(op.getObjRot()[0]);
-        this.yRotTXT.setText(op.getObjRot()[1]);
-        this.zRotTXT.setText(op.getObjRot()[2]);
-    }
+        //add properties: id, name, pos xyz, rot xyz
+        gp.add(new Text("ID:"),0,0);
+        gp.add(new TextField(propertiesList.get(id).getId()),1,0);
 
-    public void updateObjectPropertiesMenu(String[] s) {
+        gp.add(new Text("Name:"),0,1);
+        gp.add(new TextField(propertiesList.get(id).getName()),1,1);
 
-        this.idTXT.setText(s[0]);
-        this.nameTXT.setText(s[1]);
-        this.facesTXT.setText(s[2]);
-        this.verticesTXT.setText(s[3]);
+        gp.add(new Text("Position:"),0,2);
+        gp.add(new Text("X:"),0,3);
+        gp.add(new TextField(propertiesList.get(id).getPos()[0]),1,3);
+        gp.add(new Text("Y:"),0,4);
+        gp.add(new TextField(propertiesList.get(id).getPos()[1]),1,4);
+        gp.add(new Text("Z:"),0,5);
+        gp.add(new TextField(propertiesList.get(id).getPos()[2]),1,5);
 
-        this.xPosTXT.setText(s[4]);
-        this.yPosTXT.setText(s[5]);
-        this.zPosTXT.setText(s[6]);
+        gp.add(new Text("Rotation:"),0,6);
+        gp.add(new Text("X:"),0,7);
+        gp.add(new TextField(propertiesList.get(id).getRot()[0]),1,7);
+        gp.add(new Text("Y:"),0,8);
+        gp.add(new TextField(propertiesList.get(id).getRot()[1]),1,8);
+        gp.add(new Text("Z:"),0,9);
+        gp.add(new TextField(propertiesList.get(id).getRot()[2]),1,9);
 
-        this.xRotTXT.setText(s[7]);
-        this.yRotTXT.setText(s[8]);
-        this.zRotTXT.setText(s[9]);
+        if(contentType == Config.type.OBJECT){
+            System.out.println("Object");
+            ObjectProperties op = (ObjectProperties) propertiesList.get(id);
+            gp.addRow(2);
+
+            gp.add(new Text("Faces:"),0,10);
+            gp.add(new TextField(op.getFaces()),1,10);
+
+            gp.add(new Text("Vertices:"),0,11);
+            gp.add(new TextField(op.getVertices()),1,11);
+        } else if (contentType == Config.type.LIGHT) {
+            System.out.println("Light");
+            LightProperties lp = (LightProperties) propertiesList.get(id);
+            gp.addRow(2);
+
+            gp.add(new Text("Brigthness:"),0,10);
+            gp.add(new TextField(String.valueOf(lp.getBrightness())),1,10);
+
+            gp.add(new Text("Variant:"),0,11);
+            ChoiceBox<String> cb = new ChoiceBox<>();
+            String[] choice = {"Light A", "Light B", "Light C"};
+            cb.getItems().setAll(choice);
+            gp.add(cb,1,11);
+        }else if(contentType == Config.type.CAMERA){
+            System.out.println("Camera");
+            CameraProperties cp = (CameraProperties) propertiesList.get(id);
+            gp.addRow(3);
+
+            gp.add(new Text("Length:"),0,10);
+            gp.add(new TextField(String.valueOf(cp.getLength())),1,10);
+
+            gp.add(new Text("Width:"),0,11);
+            gp.add(new TextField(String.valueOf(cp.getWidth())),1,11);
+
+            gp.add(new Text("Variants:"),0,12);
+            ChoiceBox<String> cb = new ChoiceBox<>();
+            String[] choice = {"Camera A", "Camera B", "Camera C"};
+            cb.getItems().setAll(choice);
+            gp.add(cb,1,12);
+        }
+        scrollPaneProperties.setContent(gp);
     }
 
 
@@ -345,10 +422,10 @@ public class ApplicationController {
 
     // Location might change once finished (?)
     public void deleteObject(int objID) {
-        for (ObjectProperties objectProperties : propertiesList) {
-            if (objectProperties.getObjID().equals(String.valueOf(objID))) {
-                objectListView.getItems().remove(objectProperties.getButton());
-                propertiesList.remove(objectProperties);
+        for (Properties properties : propertiesList) {
+            if (properties.getId().equals(String.valueOf(objID))) {
+                objectListView.getItems().remove(properties.getButton());
+                propertiesList.remove(properties);
                 break;
             }
         }
